// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubMenu should support rootClassName 1`] = `
HTMLCollection [
  <ul
    class="rc-menu rc-menu-root rc-menu-vertical custom-className"
    data-menu-list="true"
    role="menu"
    tabindex="0"
  >
    <li
      class="rc-menu-submenu rc-menu-submenu-vertical rc-menu-submenu-open"
      role="none"
    >
      <div
        aria-controls="rc-menu-uuid-test-1-popup"
        aria-expanded="true"
        aria-haspopup="true"
        class="rc-menu-submenu-title"
        data-menu-id="rc-menu-uuid-test-1"
        role="menuitem"
        tabindex="-1"
        title="submenu1"
      >
        submenu1
        <i
          class="rc-menu-submenu-arrow"
        />
      </div>
    </li>
    <li
      aria-selected="false"
      class="rc-menu-item"
      data-menu-id="rc-menu-uuid-test-2"
      role="option"
      tabindex="-1"
    >
      2
    </li>
    <li
      aria-selected="false"
      class="rc-menu-item"
      data-menu-id="rc-menu-uuid-test-3"
      role="option"
      tabindex="-1"
    >
      3
    </li>
  </ul>,
  <div
    aria-hidden="true"
    style="display: none;"
  />,
]
`;

exports[`SubMenu should support rootClassName 2`] = `
HTMLCollection [
  <ul
    class="rc-menu rc-menu-root rc-menu-vertical custom-className"
    data-menu-list="true"
    role="menu"
    tabindex="0"
  >
    <li
      class="rc-menu-submenu rc-menu-submenu-vertical rc-menu-submenu-open rc-menu-submenu-active"
      role="none"
    >
      <div
        aria-controls="rc-menu-uuid-test-1-popup"
        aria-expanded="true"
        aria-haspopup="true"
        class="rc-menu-submenu-title"
        data-menu-id="rc-menu-uuid-test-1"
        role="menuitem"
        tabindex="-1"
        title="submenu1"
      >
        submenu1
        <i
          class="rc-menu-submenu-arrow"
        />
      </div>
      <div>
        <div
          class="rc-menu-submenu rc-menu-submenu-popup custom-className"
          style="opacity: 0;"
        >
          <ul
            class="rc-menu rc-menu-sub rc-menu-vertical"
            data-menu-list="true"
            id="rc-menu-uuid-test-1-popup"
            role="menu"
          >
            <li
              aria-selected="false"
              class="rc-menu-item"
              data-menu-id="rc-menu-uuid-test-1-1"
              role="option"
              tabindex="-1"
            >
              submenu7
            </li>
          </ul>
        </div>
      </div>
    </li>
    <li
      aria-selected="false"
      class="rc-menu-item"
      data-menu-id="rc-menu-uuid-test-2"
      role="option"
      tabindex="-1"
    >
      2
    </li>
    <li
      aria-selected="false"
      class="rc-menu-item"
      data-menu-id="rc-menu-uuid-test-3"
      role="option"
      tabindex="-1"
    >
      3
    </li>
  </ul>,
  <div
    aria-hidden="true"
    style="display: none;"
  />,
]
`;
